src/objects/CountryZipREGEX__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Enter in ALL CAPS</inlineHelpText>
        <label>CountryCode</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegExPattern__c</fullName>
        <label>RegExPattern</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>CountryZipREGEX</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>CountryCode__c</columns>
        <columns>RegExPattern__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>